--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = count # 'Italy'\n",
+    "italy = countries[-3\n",
+    "] # 'Italy'\n",
     "italy"
    ]
   },
