Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.Append # add code here"
+    "countries.Append(\"Malta\") # add code here"
    ]
   },
   {
