--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countrie # add code here"
+    "countries.append(\"Thailand\") # add code here"
    ]
   },
   {
