--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e # add code here"
+    "countries[6 # add code here"
    ]
   },
   {
