--- a/index.ipynb
+++ b/index.ipynb
@@ -489,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = \n",
+    "num_of_repeats = unique_countri\n",
     "num_of_repeats # 3"
    ]
   },
